feat(storage): migrate 9 modules from JSON to IStorage with auto-migration
Modules updated:
- NicknamesModule: load/save via getAllNicknames/upsertNickname/deleteNickname
- NicknamesModule (disguises): load/save via getAllDisguises/upsertDisguise/deleteDisguise
- ChatCustomizationModule: load/save via getAllChatPreferences/upsertChatPreference
- ReportsModule: load via getReports(), save via upsertReport/deleteReport
- NotesModule: lazy load via getNotes(uuid), save via upsertNote/clearNotes
- ReputationModule: load/save via getAllReputations/upsertReputation
- EnderChestModule: load/save via getEnderChest/upsertEnderChest (per-player)
- StashModule (items): load/save via getItemStash/upsertItemStash
- StashModule (materials): load/save via getMaterialStash/upsertMaterialStash

Each module includes auto-migration: on startup, if legacy JSON file exists,
data is bulk-inserted into the database and the file is renamed to .migrated.
Complex objects serialized as JSON strings via existing serializers.